<resources>
    <string name="app_name">Mandoor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Account</string>
    <string name="hello_welcome">Hello, Welcome!</string>
    <string name="fullname">Full name</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="signupgoogle">Sign up with Google</string>
    <string name="login">Login</string>
    <string name="tidakpunyakun">Tidak punya akun?</string>
    <string name="title_menu_1">Bangun atau Renov</string>
    <string name="desc_menu_1">Pilih sesuai kebutuhanmu, Bangun atau Renovasi?</string>
    <string name="title_menu_2">Survey</string>
    <string name="desc_menu_2">Isi survey sesuai kebutuhanmu</string>
    <string name="title_menu_3">Pilih Mandor</string>
    <string name="desc_menu_3">Pilih dan Book Mandor sesukamu</string>
    <string name="title_menu_4">Welcome</string>
    <string name="desc_menu_4">Pilih, anda Login sebagai Customer atau Mandor</string>
    <string name="User">User</string>
    <string name="Mandor">Mandor</string>
    <string name="custname">Tom Suseno</string>
    <string name="renovasi">Renovasi</string>
    <string name="hargaTotal">Total : Rp 250.000</string>
    <string name="chat">Chat</string>
    <string name="rincian">Rincian</string>
    <string name="booking">Booking</string>
    <string name="date">14 Nov 2004</string>
    <string name="bangun">Bangun</string>
    <string name="DeskripsiBangun">Bangun untuk proses pembangunan.</string>
    <string name="DeskripsiRenov">Renovasi untuk proses renovasi dan perbaikan rumah. </string>
    <string name="Customer">Customer</string>
    <string name="layanan">Layanan</string>
    <string name="hintrange">Pilih range harga</string>
    <string name="range">Range Harga</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="jangkauan_mandor">Jangkauan</string>
    <string name="tanggal">Tanggal</string>
    <string name="hintdesc">Disini anda menjelaskan tujuan projek anda agar dapat dipahami</string>
    <string name="hinttanggal">Masukkan tanggal untuk projek anda</string>
    <string name="masukkanfoto">Masukkan Foto</string>
    <string name="Gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="mandorname">Ir.Asep</string>
    <string name="rating">4</string>
    <string name="recommendmandor">Rekomendasi Mandor</string>
    <string name="customer_description">Renovasi rumah baru, membutuhkan mandor yang berpengalaman.</string>
    <string name="total_proyek">Total Proyek:</string>
    <string name="jangkauan">Tangerang Selatan, Tangerang Kota</string>
    <string name="descmandor">Kami menerima Jasa Kontraktor Bangunan,Jasa Pertukangan,Perbaikan Lantai,Pemasangan Lantai dan Pemasangan Atap</string>
    <string name="simpan">Simpan</string>
    <string name="listmandor">List Mandor</string>
    <string name="seeal">See all</string>
    <string name="pilihmandor">Pilih Mandor</string>
    <string name="password_too_short">Password minimal 8 karakter</string>
    <string name="survey_renovasi">Survey Renovasi</string>
    <string name="rate">Rating</string>
    <string name="hintraterenov">Pilih rating mandor sesuai budget dan kebutuhan anda</string>
    <string name="survey_bangun">Survey Bangun</string>
    <string name="hintlayanan">Pilih layanan anda</string>
    <string name="title_bangun">Bangun</string>
    <string name="num_proyek">5</string>
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
    <string name="profil_mandor">Profil Mandor</string>
    <string name="diterima">Diterima</string>
    <string name="booking_list">Booking List</string>
    <string name="loading">loading</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="pengalaman">Pengalaman</string>
    <string name="hintpengalamanrenov">pilih skala pengalaman mandor untuk kebutuhan anda</string>
    <string name="portofolio">Portofolio</string>
    <string name="hintportofoliorenov">Pilih skala portofolio mandor untuk kebutuhan anda</string>
    <string name="ubah_nama">Ubah Nama</string>
    <string name="nohp">No Handphone</string>
    <string name="alamat">Alamat</string>
    <string name="tomsus">Tom Sus</string>
    <string name="custusername">Tom Sus</string>
    <string name="ubah_username">Ubah Username</string>
    <string name="ubah_email">Ubah Email</string>
    <string name="ubah_nohp">Ubah No Handphone</string>
    <string name="e_mail">tom.suseno@gmail.com</string>
    <string name="no_hp">08115006969</string>
    <string name="hellowelcomeback">Hello, Welcome back!</string>
    <string name="ubah">Ubah</string>
    <string name="rate_rec">Rating:</string>
    <string name="pengalaman_rec">Skala Pengalaman:</string>
    <string name="scale_pengalaman">5</string>
    <string name="portofolio_rec">Skala Portofolio:</string>
    <string name="layanan_rec">Layanan:</string>
    <string name="portofolio_scale">4</string>
    <string name="layanan_recommend">Pengecatan</string>
    <string name="rangeharga_rec">Range Harga:</string>
    <string name="rangeharga_recommend">Rp.200.000</string>
    <string name="deskripsirec">Deskripsi:</string>
    <string name="alamat_rec">Alamat Pengerjaan:</string>
    <string name="alamat_recommend">UIN Sunan Kalijaga, Jl. Laksda Adisucipto, Papringan, Caturtunggal, Kec. Depok, Kabupaten Sleman, Daerah Istimewa Yogyakarta \n\n(Gedung FST)\n\nDEPOK, KAB SLEMAN, DI YOGYAKARTA, ID 55281  </string>
    <string name="tanggal_rec">Tanggal:</string>
    <string name="tanggal_recommend">2024 - 12 - 12</string>
    <string name="foto">Foto:</string>
    <string name="nohp_value">08115006969</string>
    <string name="hint_jangkauan">Masukkan jangkauan tempat projek anda (contoh: Jakarta, Depok, Bekasi, Pasuruan)</string>
    <string name="logout">Logout</string>
    <string name="hapusakun">Hapus Akun</string>
    <string name="book">Book</string>
    <string name="ongoing">Ongoing</string>
    <string name="lanjutpembayaran">Lanjut Pembayaran</string>
    <string name="pembayaranmu">Pembayaranmu:</string>
    <string name="methodbayar">Pilih Metode Pembayaran:</string>
    <string name="viaaccount">Transfer Virtual Account</string>
    <string name="viacash">Dompet Digital</string>
    <string name="payment_successful">Pembayaran Berhasil</string>
    <string name="payment_success_message">Transaksi anda berhasil. Untuk detail lebih lanjut lihat rincian.</string>
    <string name="payment_details">Rincian</string>
    <string name="sertifikasi">Sertifikasi</string>
    <string name="sertif">Keselamatan dan Kesehatan Kerja (K3).\nBadan Nasional Sertifikasi Profesi (BNSP).\nAhli Muda Konstruksi</string>
    <string name="pengalaman_rincian">Proyek Bangunan Gedung Bertingkat\nPembangunan Rumah Tinggal Pribadi\nRenovasi Gedung Perkantoran</string>
    <string name="nomor_telepon">Nomor Telepon:</string>
    <string name="email_rincian">Email:</string>
    <string name="email_mandor">asep.sukanto@gmail.com</string>
    <string name="rahasia">*Informasi diatas bersifat RAHASIA*</string>
    <string name="backhome">Kembali ke Home</string>
</resources>